--- a/Changelog.txt
+++ b/Changelog.txt
@@ -12,7 +12,7 @@
 	Rename SamBelanger Inc to SamBelanger, Inc.
 +Bugfixes
 	Fixed texture glitches
-	Fixed bugs in configs- orbits misplaced and atmoshperes missing
+	Fixed bugs in configs- orbits misplaced and atmospheres missing
   
 --------Changelog: DoubleDouble Pre-Version V1.0----------
   The first version
