--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,18 +1,1 @@
---------Changelog: DoubleDouble Pre-Version V1.1----------
-+New
-	Added Serry System
-	Added 3.75 M FTL Drive and fuel tanks
-	Added Resource: FTL Fuel Pellets
-	Added Agency: Black Monolith Scientists
-	Added new Flags
-+Compatibility
-	Added SigmaBinary compatibility config
-+Enhancements
-	Some descriptions improved
-	Rename SamBelanger Inc to SamBelanger, Inc.
-+Bugfixes
-	Fixed texture glitches
-	Fixed bugs in configs- orbits misplaced and atmospheres missing
-  
---------Changelog: DoubleDouble Pre-Version V1.0----------
-  The first version
+We're procrastinators, and we haven't released the mod yet. There __is__ no changelog. Go away.
